--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
