--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
+    "buffer": "^6.0.3",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
